@@ -12,5 +12,6 @@ The items are sorted inversely, i.e. lastest items are on top
   - Cop.toString() does not xml-encode anymore (& to &amp etc.)
   - removed Cop.toStringNonEncoded()
   - Cop.toString() and Resource.toString() do not return a usable url anymore, use new method toURL()
+  - Cop.toURL() and Cop.toAbsolute() do not call response.encodeURL anymore
 * updated jspm library to build.14, added getlib.properties and check.version target to getlib.xml
 
